<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/LogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/foodie_app"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/userText"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="90dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:hint="Username"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:background="@drawable/custom_edit_text"/>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:hint="Password"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:background="@drawable/custom_edit_text"/>
    
    <TextView
        android:id="@+id/forgotPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="#fff"
        />

    <Button
        android:id="@+id/signinBtn"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:layout_gravity="center_horizontal"
        android:text="Sign in"
        android:onClick="onClick"
        android:textColor="#00B8D4"
        android:background="@drawable/custom_btn"/>
    
    <TextView
        android:id="@+id/signupTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/no_account"
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/signupLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textColor="#fff"/>


    

    

</LinearLayout>